# TelegramScheduler

./: .gitignore  LICENSE  README.md  discover_models.py  pyproject.toml  setup.bat  start_ui.bat
scheduler_ui/: __init__.py  __main__.py  app.py  discovery.py  gateway_manager.py  models.py  scheduler.py
scheduler_ui/static/: style.css
scheduler_ui/tasks/: __init__.py
scheduler_ui/templates/: base.html  dashboard.html  jobs.html  logs.html
telegram_reader/: .env.example  config.py  email_sender.py  main.py  state.py  summarizer.py  telegram_bot.py  url_processor.py
telegram_reader/templates/: email.html
