[project]
name = "telegramscheduler"
version = "0.1.0"
description = "CLI apps with cron scheduling and Flask monitoring UI"
requires-python = ">=3.12"
dependencies = [
    # Shared
    "httpx>=0.27",
    "python-dotenv>=1.0",
    # Telegram reader
    "trafilatura>=1.12",
    "openai>=1.0",
    "jinja2>=3.1",
    # Scheduler UI
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "apscheduler>=3.10",
]
